# supervision-keypoint-muting

./: .gitignore  README.md  main.py  pyproject.toml
examples/: 3.webm
