[project]
name = "supervision-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.10"
dependencies = [
    "mediapipe>=0.10.14",
    "opencv-python>=4.11.0.86",
    "supervision",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.75",
]

[tool.uv.sources]
supervision = { path = "../supervision" }

[dependency-groups]
dev = [
    "pylint>=3.3.4",
]

[tool.pylint.typecheck]
generated-members = [
    "cv2.[cvtColor|imread|imwrite|putText|getTextSize|FONT_*|LINE_AA]",
]
